<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewModel"
            type="com.autochips.avm.viewmode.RearviewMirrorModel" />


        <variable
            name="passedText"
            type="String" />

    </data>

    <LinearLayout
        android:id="@+id/ll_rearviewMirror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66px"
        binding:onClickCommand="@{viewModel.pRearviewClick}"
        android:background="@mipmap/rearview_setting_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_rearview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54px"
            android:layout_marginTop="45px"
            android:text="@string/setting_rearview_mirror"
            android:textColor="@drawable/text_selcet"
            android:textSize="@dimen/text_size_24px" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_fold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54px"
            android:layout_marginTop="18px">

            <LinearLayout
                android:id="@+id/ll_setting_fold"
                android:layout_width="216px"
                android:layout_height="60px"
                android:background="@drawable/shape_btn_bg_nor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_setting_fold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_fold"
                    android:paddingTop="1px"
                    android:drawablePadding="6px"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/button_select_setting_fold"
                    android:includeFontPadding="false"
                    android:lineHeight="36px"
                    android:textColor="@drawable/text_selcet"
                    android:textSize="@dimen/text_size_24px" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_setting_expand"
                android:layout_width="216px"
                android:layout_height="60px"
                android:layout_marginStart="18px"
                android:background="@drawable/shape_btn_bg_nor"
                app:layout_constraintStart_toEndOf="@id/ll_setting_fold"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:orientation="horizontal">

<!--                <ImageView-->
<!--                    android:id="@+id/iv_setting_view"-->
<!--                    android:layout_width="48px"-->
<!--                    android:layout_height="48px"-->
<!--                    android:src="@mipmap/ic_back_mirror" />-->

                <TextView
                    android:id="@+id/tv_setting_expand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_expand"
                    android:paddingTop="1px"
                    android:includeFontPadding="false"
                    android:drawablePadding="6px"
                    android:gravity="center_vertical"
                    android:drawableStart="@drawable/button_select_mirror"
                    android:lineHeight="36px"
                    android:layout_marginStart="6px"
                    android:textColor="@drawable/text_selcet"
                    android:textSize="@dimen/text_size_24px" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_setting_rearview_mirror_down"
            android:layout_width="450dp"
            android:layout_height="60dp"
            android:layout_marginStart="54px"
            android:layout_marginTop="18px"
            android:background="@drawable/shape_btn_bg_nor"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_setting_rearview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_rearview_mirror_down"
                android:includeFontPadding="false"
                android:lineHeight="36px"
                android:paddingTop="1px"
                android:textAlignment="center"
                android:textColor="@color/setting_view_content_color"
                android:textSize="@dimen/text_size_24px" />

        </LinearLayout>

    </LinearLayout>
</layout>